--- a/zonoapp/templates/pages/user_management/users_notification.html
+++ b/zonoapp/templates/pages/user_management/users_notification.html
@@ -7,17 +7,14 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header">
 
-    </div>
-    <div class="card-block row">
-        <div class="col-sm-12 col-lg-12 col-xl-12">
-          <div class="table-responsive custom-scrollbar">
-            <table class="table table-inverse table-striped">
-              <thead>
+      <div class="container-fluid mt-4">
+          <div class="table-responsive table-striped">
+            <table class="table">
+              <thead class="table-dark">
                 <tr>
-                  <th scope="col">Message</th>
-                  <th scope="col">Created At</th>
+                  <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Message</span></th>
+                  <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Created At</span></th>
                   
                 </tr>
               </thead>
@@ -65,7 +62,6 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
     
     
