rcm denial flow added

--- a/zonoapp/templates/pages/campaign/create_campaign.html
+++ b/zonoapp/templates/pages/campaign/create_campaign.html
@@ -68,6 +68,7 @@
                           <select class="form-control" id="processType" required>
                             <option value="" disabled selected>Select process type</option>
                             <option value="RCM">RCM</option>
+                            <option value="RCM">RCM_DENIAL</option>
                             <option value="RETRIEVAL">RETRIEVAL</option>
                             <option value="OTHER">OTHER</option>
                           </select>
