--- a/zonoapp/templates/pages/campaign/create_campaign.html
+++ b/zonoapp/templates/pages/campaign/create_campaign.html
@@ -135,7 +135,7 @@
                     <h5 class="f-w-600">Agent Information</h5>
                     <p class="f-light">Select the agent for the calls</p>
                     <div class="shipping-title">
-                      <h6 class="mb-2">Available Agents</h6>
+                      <h6 class="mb-2">Available Agent</h6>
                       <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalgetbootstrap" data-whatever="@getbootstrap"> <i class="fa fa-plus-square f-20"></i></button>
 
                     </div>
