--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -53,8 +53,10 @@
                         <button type="button" class="nav-link avg" role="tab" onclick="updateAverageHandlingTimeChart('monthly', this)">Monthly</button>
                     </li>
                   </ul>
-                <canvas id="callDurationChart" height="100"></canvas>
-            </div>
+                </div>
+                <div class="card-body">
+                    <canvas id="callDurationChart" height="100"></canvas>
+                </div>
           </div>
         </div>
       </div>
@@ -84,8 +86,7 @@
             </div>      
           
           <div class="card-body" style="display: flex;
-          justify-content: center;
-          height: 400px;">
+          justify-content: center;">
           <button class="btn p-0" type="button" id="durationOptions" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="bx bx-dots-vertical-rounded bx-lg text-muted"></i>
         </button>
@@ -94,7 +95,8 @@
             <div class="table-responsive custom-scrollbar">
 
             </div>
-             <canvas id="callFailureChart" ></canvas>
+            
+             <canvas id="callFailureChart"  style="max-width: 343px; max-height: 343px; "></canvas>
           </div>
         </div>
         </div>
