--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -23,7 +23,7 @@
   <div class="row">
     <div class="card border rounded-3 checkbox-checked" style="padding:1%;">
       <div class="dropdown-form" style="display: flex; flex-direction: column; justify-content: flex-end; ">
-        <h4 class="sub-title" style="width: 190px; padding-bottom: 0px; font-weight: bold; padding-left: 4px;">Select Organisation:</h4>
+        <h4 class="sub-title" style="width: 190px; padding-bottom: 0px; font-weight: bold; padding-left: 4px;">Select Organization:</h4>
         <select class="form-select" style="width: 200px;" name="organisation" id="organisationName" required onchange="onOrganisationChange()">
          {% for org in organisation_list %}
          <option value="{{ org.organisation_name }}" {{ org.organisation_name }} {% if org.organisation_name == request.user.organisation_name %} selected {% endif %}>{{ org.organisation_name }}</option>
