--- a/zonoapp/templates/pages/user_management/add_user.html
+++ b/zonoapp/templates/pages/user_management/add_user.html
@@ -54,10 +54,10 @@
                         <table class="table">
                             <thead  class="table-dark" >
                                 <tr>
-                                    <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;"> UserName </span></th>
+                                    <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;"> User Name </span></th>
                                     <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Email</span></th>
                                     <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Role</span></th>
-                                    <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Organisation</span></th>
+                                    <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Organization</span></th>
                                     <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Date Joined</span></th>
                                     <th scope="col"><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Action</span></th>    
                                 </tr>
