--- a/zonoapp/templates/pages/user_management/add_user.html
+++ b/zonoapp/templates/pages/user_management/add_user.html
@@ -179,7 +179,7 @@
             <div class="col-12">
                 <div class="form-check form-switch">
                     <input class="form-check-input" id="flexSwitchCheckDefault" type="checkbox" role="switch" required="">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Are you sure the above information is true</label>
+                    <label class="form-check-label" for="flexSwitchCheckDefault"> I hereby declare that the information provided is true and correct.</label>
                 </div>
             </div>
             <div class="col-12">
@@ -422,13 +422,15 @@
                             }
                             else if(data['status_code'] == 400 && data['status'] == 'username'){
                                 showToast('error', ' Username already Present !');   
-                            }else{
-                            showToast('success', 'Form submitted successfully!');
+                            }
+                            else{
+                                showToast('success', 'Form submitted successfully!');
+                                modal.classList.add("d-none");
+                                userTable.classList.remove("d-none");
                             // Hide form and show table after successful submission
                             }
                             // Hide form and show table after successful submission
-                            modal.classList.add("d-none");
-                            userTable.classList.remove("d-none");
+                            
                         })
                         .catch(error => {
                             console.error("Form submission error", error);
@@ -443,7 +445,7 @@
                         text: message,
                         icon: type,
                         confirmButtonText: 'OK'
-                    }).then(() => { location.reload(); });
+                    }).then(() => { if (type==='success') location.reload(); });
                 }
         
                 document.querySelector('.btn-close').addEventListener('click', function() {
