--- a/zonoapp/templates/pages/campaign/contact_list.html
+++ b/zonoapp/templates/pages/campaign/contact_list.html
@@ -378,7 +378,7 @@ function startCampaign(campaign_id, selected_contact_list) {
                     Swal.fire({
                         icon: 'success',
                         text: response.message
-                    });
+                    }).then(() => {  location.reload(); });;
                 },
                 error: function(xhr, status, error) {
                     Swal.fire({
