--- a/zonoapp/templates/pages/campaign/call_logs.html
+++ b/zonoapp/templates/pages/campaign/call_logs.html
@@ -40,13 +40,13 @@
             </select>
         </div>
     </div>
-    <div class="table-responsive table-striped">
+    <div class="table-responsive table-striped" style="max-height: 60vh; overflow-y: auto;">
     <table class="table"  id="callLogsTable">
         <thead class="table-dark">
             <tr>
                 {% if call_logs_data %}
                     {% for key in call_logs_data.0.keys %}
-                    <th class=""><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">{{ key }}</span></th>
+                    <th style="position: sticky; top: 0; z-index: 1; background-color: #343a40;" class=""><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">{{ key }}</span></th>
                     {% endfor %}
                 {% endif %}
             </tr>
