Add edit prompt button for superuser

--- a/zonoapp/templates/pages/campaign/call_logs.html
+++ b/zonoapp/templates/pages/campaign/call_logs.html
@@ -295,6 +295,13 @@
 <script src="{% static 'assets/js/jquery.min.js' %}"></script>
 
 <script>
+const audio = document.getElementById('callDetailsDrawerHideBtn');
+const pauseButton = document.getElementById('call_recording_audio');
+
+
+pauseButton.addEventListener('click', function() {
+            audio.pause(); // Pauses the audio
+});
 
     function updateTable(data) {
     console(data);
