--- a/zonoapp/templates/pages/campaign/call_logs.html
+++ b/zonoapp/templates/pages/campaign/call_logs.html
@@ -295,6 +295,14 @@
 
 <script>
 
+const audio = document.getElementById('callDetailsDrawerHideBtn');
+const pauseButton = document.getElementById('call_recording_audio');
+
+
+pauseButton.addEventListener('click', function() {
+            audio.pause(); // Pauses the audio
+});
+
 
 document.getElementById('searchBtn').addEventListener('click', async () => {
         const field = document.getElementById('fieldselect').value;
